// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Pre-deployment validation for Azure readiness. Run deep checks on configuration, infrastructure (Bicep or Terraform), RBAC role assignments, managed identity permissions, and prerequisites before deploying. WHEN: validate my app, check deployment readiness, run preflight checks, verify configuration, check if ready to deploy, validate azure.yaml, validate Bicep, test before deploying, troubleshoot deployment errors, validate Azure Functions, validate function app, validate serverless deployment, verify RBAC roles, check role assignments, review managed identity permissions, what-if analysis, validate Container Apps deployment.",
  "extractedKeywords": [
    "analysis",
    "apps",
    "assignments",
    "azure",
    "before",
    "bicep",
    "check",
    "checks",
    "configuration",
    "container",
    "deep",
    "deploy",
    "deploying",
    "deployment",
    "errors",
    "function",
    "functions",
    "identity",
    "infrastructure",
    "managed",
    "permissions",
    "pre-deployment",
    "preflight",
    "prerequisites",
    "rbac",
    "readiness",
    "ready",
    "review",
    "role",
    "roles",
    "security",
    "serverless",
    "terraform",
    "test",
    "troubleshoot",
    "validate",
    "validation",
    "verify",
    "what-if",
    "when",
    "yaml",
  ],
  "name": "azure-validate",
}
`;

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "analysis",
  "apps",
  "assignments",
  "azure",
  "before",
  "bicep",
  "check",
  "checks",
  "configuration",
  "container",
  "deep",
  "deploy",
  "deploying",
  "deployment",
  "errors",
  "function",
  "functions",
  "identity",
  "infrastructure",
  "managed",
  "permissions",
  "pre-deployment",
  "preflight",
  "prerequisites",
  "rbac",
  "readiness",
  "ready",
  "review",
  "role",
  "roles",
  "security",
  "serverless",
  "terraform",
  "test",
  "troubleshoot",
  "validate",
  "validation",
  "verify",
  "what-if",
  "when",
  "yaml",
]
`;
